--- a/index.html
+++ b/index.html
@@ -4,8 +4,31 @@
 <meta charset = "UTF-8" />
 <title> FT-RIDDLE </title>
 <meta name = "viewport" content = "width = device-width, initial-scale = 1" />
-<! -
+<! -SugarCube (v2.34.1): Um formato de história gratuito (grátis e libre).
 
+Copyright © 2013–2020 Thomas Michael Edwards <thomasmedwards@gmail.com>.
+Todos os direitos reservados.
+
+Redistribuição e uso nas formas de origem e binária, com ou sem
+modificação, são permitidas desde que as seguintes condições sejam atendidas:
+
+1. As redistribuições do código-fonte devem manter o aviso de direitos autorais acima, este
+   lista de condições e a seguinte isenção de responsabilidade.
+2. As redistribuições em forma binária devem reproduzir o aviso de direitos autorais acima,
+   esta lista de condições e a seguinte isenção de responsabilidade na documentação
+   e / ou outros materiais fornecidos com a distribuição.
+
+ESTE SOFTWARE É FORNECIDO PELOS PROPRIETÁRIOS DE DIREITOS AUTORAIS E CONTRIBUIDORES "NO ESTADO EM QUE SE ENCONTRA" E
+QUAISQUER GARANTIAS EXPRESSAS OU IMPLÍCITAS, INCLUINDO, MAS NÃO SE LIMITANDO A, IMPLÍCITAS
+AS GARANTIAS DE COMERCIALIZAÇÃO E ADEQUAÇÃO A UM DETERMINADO FIM SÃO
+RENUNCIADO. EM NENHUMA HIPÓTESE O PROPRIETÁRIO DOS DIREITOS AUTORAIS OU CONTRIBUIDORES SERÁ RESPONSÁVEL POR
+QUAISQUER DANOS DIRETOS, INDIRETOS, INCIDENTAIS, ESPECIAIS, EXEMPLARES OU CONSEQÜENCIAIS
+(INCLUINDO, MAS NÃO SE LIMITANDO A, AQUISIÇÃO DE BENS OU SERVIÇOS DE SUBSTITUIÇÃO;
+PERDA DE USO, DADOS OU LUCROS; OU INTERRUPÇÃO DE NEGÓCIOS) NO ENTANTO, CAUSADA E
+EM QUALQUER TEORIA DE RESPONSABILIDADE, SEJA EM CONTRATO, RESPONSABILIDADE RIGOROSA OU ARTIGO
+(INCLUINDO NEGLIGÊNCIA OU DE OUTRA FORMA) DECORRENTE DE QUALQUER FORMA DO USO DESTE
+SOFTWARE, MESMO SE AVISADO SOBRE A POSSIBILIDADE DE TAIS DANOS.
+	
 ->
 <script id = "script-libraries" type = "text / javascript">
 if (document.head && document.addEventListener && document.querySelector && Object.create && Object.freeze && JSON) {document.documentElement.setAttribute ("data-init", "carregando");
